--- a/help/engl/player_controls_extended.html
+++ b/help/engl/player_controls_extended.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-  <title>Weitere Anzeigen / Steuerung</title>
+  <title>Extended display / controls</title>
 
 
   <style title="" media="" type="text/css">
@@ -35,7 +35,7 @@ font-size: 12px;
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
       <td>
-      <h2 class="head">Weitere Anzeigen / Steuerung<br>
+      <h2 class="head">Extended display / controls<br>
 
       </h2>
 
@@ -59,10 +59,10 @@ font-size: 12px;
       <td style="width: 30px;"><img style="width: 234px; height: 188px;" src="cover.jpg" alt="disabled"></td>
 
       <td><span style="font-weight: bold;">Cover-Art</span>
-zum aktuellen Titel.<br>
+to the current track.<br>
 
-      <span style="font-style: italic;">Tipp: Nemp kann
-fehlende Cover automatisch aus dem Netz nachladen.</span><br>
+      <span style="font-style: italic;">Tip: Nemp can
+download missing cover art automatically</span><br>
 
       </td>
 
@@ -72,16 +72,16 @@ fehlende Cover automatisch aus dem Netz nachladen.</span><br>
 
       <td style="width: 30px;"><img style="width: 234px; height: 188px;" src="lyrics.jpg" alt="disabled"></td>
 
-      <td><span style="font-weight: bold;">Liedtext
-(Lyrics)</span> zum aktuellen Titel<br>
+      <td><span style="font-weight: bold;">Lyrics</span>
+to the current track<br>
 
-      <span style="font-style: italic;">Tipp 1: Im
-"Eigenschaften"-Fenster k&ouml;nnen Sie Liedtexte manuell eingeben</span><br style="font-style: italic;">
+      <span style="font-style: italic;">Tip 1: You can set
+the lyrics manually in the properties-dialog</span><br style="font-style: italic;">
 
-      <span style="font-style: italic;">Tipp 2: Markieren
-Sie einige Titel in ihrer Musiksammlung, und dr&uuml;cken Sie
-Strg+L. Dann werden die Liedtexte automatisch gesucht (und in vielen
-F&auml;llen auch gefunden)</span></td>
+      <span style="font-style: italic;">Tip 2: Select some
+tracks in the title list of the media library and press Ctrl+L. Nemp
+will search the lyrics for the selected songs automatically (and quite
+often it will find them, too).</span></td>
 
     </tr>
 
@@ -91,9 +91,8 @@ F&auml;llen auch gefunden)</span></td>
 
       <td><span style="font-weight: bold;">Equalizer</span><br>
 
-      <span style="font-style: italic;">Tipp: Bei
-Rechtsklick auf einen Regler springt dieser zur&uuml;ck in die
-0-Stellung.</span></td>
+      <span style="font-style: italic;">Tip: Right click
+on one of the controls will reset it to the default setting.</span></td>
 
     </tr>
 
@@ -101,11 +100,10 @@ Rechtsklick auf einen Regler springt dieser zur&uuml;ck in die
 
       <td><img style="width: 234px; height: 188px;" alt="" src="effekte.jpg"></td>
 
-      <td><span style="font-weight: bold;">Effekte</span><br>
+      <td><span style="font-weight: bold;">Effects</span><br>
 
-      <span style="font-style: italic;">Tipp: In den
-Einstellungen k&ouml;nnen Sie &auml;ndern, wie sich die
-&Auml;nderung der Geschwindigkeit anh&ouml;rt.<br>
+      <span style="font-style: italic;">Tip: You can
+change in the settings dialog, how changing the speed will sound.<br>
 
       <br>
 
@@ -121,8 +119,7 @@ Effekte</span><span style="font-style: italic;"><span style="font-style: italic;
 
             <td style="width: 56px;"><img style="width: 24px; height: 24px;" alt="" src="BtnReverse.png"></td>
 
-            <td style="width: 347px;">R&uuml;ckw&auml;rts
-abspielen</td>
+            <td style="width: 347px;">Reverse playback</td>
 
           </tr>
 
@@ -130,11 +127,12 @@ abspielen</td>
 
             <td style="width: 56px;"><img style="width: 72px; height: 24px;" alt="" src="BtnABRepeat.png"></td>
 
-            <td style="width: 347px;">A-B-Wiederholung<br>
+            <td style="width: 347px;">A-B-Repeat<br>
 
-            <span style="font-style: italic;">Tipp: Wenn
-Sie den Startpunkt A und den Endpunkt B gesetzt haben, k&ouml;nnen
-Sie auch im Hauptteil des Players die kleinen Regler verschieben.</span></td>
+            <span style="font-style: italic;">Tip: If you
+selected the start point A and the end point B of the loop, you can
+click&amp;drag the little controls in the main part of the player
+to change the loop.</span></td>
 
           </tr>
 
@@ -149,17 +147,16 @@ Sie auch im Hauptteil des Players die kleinen Regler verschieben.</span></td>
 
       <td><img style="width: 234px; height: 188px;" alt="" src="head.jpg"></td>
 
-      <td><span style="font-weight: bold;">Kopfh&ouml;rer-Wiedergabe</span><br>
+      <td><span style="font-weight: bold;">Headphones</span><br>
 
-      <span style="font-style: italic;">Tipp:
-Schlie&szlig;en Sie eine zweite Soundkarte an ihren Rechner an, um
-diese Funktion voll auszunutzen. Ganz einfache f&uuml;r ein paar
-Euro reichen daf&uuml;r schon aus!<br>
+      <span style="font-style: italic;">Tip:
+Install a second sound card on your PC. Very simple ones for a few
+Euros/Dollars/... &nbsp;will work for that.<br>
 
       <br>
 
-      </span><span style="font-weight: bold;">Besondere
-Funktionen</span><span style="font-style: italic;"><br>
+      </span><span style="font-weight: bold;">Special
+features</span><span style="font-style: italic;"><br>
 
       </span>
       <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
@@ -170,10 +167,12 @@ Funktionen</span><span style="font-style: italic;"><br>
 
             <td style="width: 1px;"><img style="width: 24px; height: 24px;" alt="" src="BtnLoadHeadset.png"></td>
 
-            <td style="width: 402px;">L&auml;dt das
-aktuell markierte St&uuml;ck aus Playlist oder Medienbibliothek in
-den Kopfh&ouml;rer und spielt es ab<br>
-            <span style="font-style: italic;">Tipp: Das geht auch &uuml;ber die Tastenkombination Strg+H.</span></td>
+            <td style="width: 402px;">Copy the currently
+selected track of the playlist (or the title list of the media library)
+int to headphone controls and starts playback.<br>
+
+            <span style="font-style: italic;">Tip: You can
+use the shortcut Ctrl+H for that.</span></td>
 
           </tr>
 
@@ -181,13 +180,13 @@ den Kopfh&ouml;rer und spielt es ab<br>
 
             <td style="width: 1px;"><img style="width: 24px; height: 24px;" alt="" src="BtnHeadsetToPlaylist.png"></td>
 
-            <td style="width: 402px;">F&uuml;gt das
-aktuelle St&uuml;ck im Kopfh&ouml;rer-Player in die Playlist
-ein. <br>
+            <td style="width: 402px;">Copy the current
+track from the headphones control into the playlist. <br>
 
-            <span style="font-style: italic;">Tipp: In den
-Einstellungen k&ouml;nnen Sie angeben, wie genau das
-Einf&uuml;gen erfolgt.</span></td>
+            <span style="font-style: italic;">Tip: There
+is a setting </span><span style="font-style: italic;">
+(Settings dialog -&gt; Playlist) </span><span style="font-style: italic;">what exactly happens (enqueue at
+the end, after the current title, ...)</span></td>
 
           </tr>
 
@@ -195,14 +194,15 @@ Einf&uuml;gen erfolgt.</span></td>
 
             <td style="width: 1px;"><img style="width: 22px; height: 22px;" alt="" src="BtnHeadsetPlaynow.png"></td>
 
-            <td style="width: 402px;">F&uuml;gt das
-aktuelle St&uuml;ck im Kopfh&ouml;rer-Player in die Playlist
-hinter das aktuelle St&uuml;ck in der Playlist ein und startet die
-Wiedergabe an der aktuellen Stelle.<br>
+            <td style="width: 402px;">Copy the current
+track from the headphones control into the playlist and immediatly
+begins playback (through the main speakers) from the current position.<br>
 
-            <span style="font-style: italic;">Tipp: Nutzen
-Sie diese Funktion, wenn z.B. ein Titel ein unn&ouml;tiges Intro
-hat, und Sie auf einer Party keine langen Pausen haben wollen.</span></td>
+            <span style="font-style: italic;">Tip: Use
+this feature, if you want to play a track with an annoying intro on a
+party. Scroll (in&nbsp;headphone mode) after the intro, wait until
+the current track (on main speaker) is near the end and click the
+button.</span></td>
 
           </tr>
 
