--- a/help/engl/player_controls.html
+++ b/help/engl/player_controls.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-  <title>Anzeigen / Steuerung des Players</title>
+  <title>Display /Controls of the Player</title>
 
 
   <style title="" media="" type="text/css">
@@ -35,7 +35,7 @@ font-size: 12px;
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
       <td>
-      <h2 class="head">Anzeigen / Steuerung des Players</h2>
+      <h2 class="head">Display /Controls of the Player</h2>
 
       </td>
 
@@ -52,33 +52,31 @@ font-size: 12px;
 
 <br>
 
-<span style="font-weight: bold;">Titelanzeige<br>
+<span style="font-weight: bold;">Title display<br>
 
-</span><span style="font-style: italic;">Tipp:
-Schalten Sie per&nbsp;Klick um zwischen verschiedenen Anzeigen:</span><span style="font-weight: bold; font-style: italic;"></span>
+</span><span style="font-style: italic;">Tip:
+Switch between some display modes by clicking on the title:</span><span style="font-weight: bold; font-style: italic;"></span>
 <ul style="list-style-type: circle; font-style: italic;">
 
-  <li>Anzeige von Interpret - Titel, so wie es auch die Playliste
-macht</li>
+  <li>Display of "Artist - Title" (as it appears in the playlist)</li>
 
-  <li>Anzeige des Dateinamens inklusive des komplette Pfades</li>
+  <li>Display of the filename, including the complete path</li>
 
-  <li>Zus&auml;tzliche Infos zur Datei wie Bitrate,
-Samplerate und Dauer</li>
+  <li>Addiotional information like bitrate, samplerate, duration</li>
 
-  <li>Liedtext (falls vorhanden)</li>
+  <li>Lyrics (if existing)</li>
 
 </ul>
 
-<span style="font-weight: bold;">Sternchen-Bewertung</span><br>
+<span style="font-weight: bold;">Rating</span><br>
 
-<span style="font-style: italic;">Tipp: Bewerten Sie das
-aktuelle Lied mit einem Klick an die richtige Stelle.</span><br>
+<span style="font-style: italic;">Tip: Rate the current
+title with a single click.</span><br>
 
 <br>
 
-<span style="font-weight: bold;">Anzeige von aktiven Tools
-(nicht im Bild)</span><br>
+<span style="font-weight: bold;">Display of activated
+tools (not visible in the image above)</span><br>
 
 Je nachdem welche Tools gerade aktiv sind, werden unter den
 Sternchen weitere Symbole eingeblendet.<br>
@@ -91,11 +89,9 @@ Sternchen weitere Symbole eingeblendet.<br>
 
       <td style="width: 30px;"><img style="width: 16px; height: 16px;" src="shutdown.png" alt="disabled"></td>
 
-      <td>Der Countdown zum <a href="herunterfahren.html">Herunterfahren</a>
-wurde aktiviert. Was genau wann passiert, erfahren Sie &uuml;ber
-den
-Hinweis, der erscheint, wenn Sie eine zeitlang den Mauszeiger auf
-diesem Symbol lassen.</td>
+      <td>The countdown to <a href="herunterfahren.html">shutdown</a>
+is active. What kind of shutdown has been selected is shown in the hint
+text (point on the icon for a second or two).&nbsp;</td>
 
     </tr>
 
@@ -103,9 +99,10 @@ diesem Symbol lassen.</td>
 
       <td style="width: 30px;"><img style="width: 16px; height: 16px;" src="geburtstag.png" alt="disabled"></td>
 
-      <td>Der <a href="geburtstagsmodus.html">Geburtstagsmodus</a>
-wurde aktiviert. Nemp wird zu gegebener zeit die Wiedergabe der
-Playlist f&uuml;r ein Geburtstagsst&auml;ndchen unterbrechen</td>
+      <td>The <a href="geburtstagsmodus.html">Birthday
+mode</a>
+is active. Nemp will interrupt the playlist at the given time for a
+"Hapy Birthday".</td>
 
     </tr>
 
@@ -113,9 +110,10 @@ Playlist f&uuml;r ein Geburtstagsst&auml;ndchen unterbrechen</td>
 
       <td><img style="width: 16px; height: 16px;" src="webserver.png" alt=""></td>
 
-      <td>Der <a href="webserver.html">Webserver</a>
-ist aktiviert um den Zugriff auf den Player &uuml;ber einen
-Webbrowser zu erm&ouml;glichen.</td>
+      <td>The&nbsp;<a href="webserver.html">Nemp
+webserver</a>
+is active to grant access to the media library and the player through a
+webbrowser (e.g. choose the next track to play through your smartphone)</td>
 
     </tr>
 
@@ -123,9 +121,9 @@ Webbrowser zu erm&ouml;glichen.</td>
 
       <td><img style="width: 16px; height: 16px;" src="scrobbler.png" alt=""></td>
 
-      <td><a href="scrobbeln.html">Scrobbeln</a>
-ist aktiviert. Die Lieder, die Sie gerade h&ouml;ren, werden in Ihr
-Benutzerprofil auf last.fm &uuml;bertragen.<br>
+      <td><a href="scrobbeln.html">Scrobbling</a>
+is active. The songs you are currently listening to are shared with
+your friends on LastFM.<br>
 
       </td>
 
@@ -136,36 +134,33 @@ Benutzerprofil auf last.fm &uuml;bertragen.<br>
 
 <br>
 
-<span style="font-weight: bold;">Zeitanzeige</span><br>
+<span style="font-weight: bold;">Time display</span><br>
 
-<span style="font-style: italic;">Tipp: Schalten Sie per
-Klick um&nbsp;zwischen Zeit- und Restzeit-Anzeige.</span><span style="font-weight: bold;"></span><br>
-
-<br>
-
-<span style="font-weight: bold;">Lautst&auml;rke</span><br>
-
-&Uuml;ber den senkrechten Schieberegeler k&ouml;nnen Sie die
-Lautst&auml;rke einstellen<br>
+<span style="font-style: italic;">Tip: Switch between
+"time" and "time remaining" by clicking on the time.</span><span style="font-weight: bold;"></span><br>
 
 <br>
 
-<span style="font-weight: bold;">Fortschrittsanzeige</span><br>
+<span style="font-weight: bold;">Volume control</span><br>
 
-Anzeige und &Auml;nderung des
-Fortschritts im aktuellen Titel.<br>
-
-<br>
-
-<h3>
-Steuerung des Players<span style="font-weight: bold;"></span></h3>
-
-<span style="font-style: italic;">Tipp: Einige Buttons
-haben mehrere Funktionen. Probieren Sie die rechte Maustaste!</span><br>
+Click&amp;Drag the vertical slider.<br>
 
 <br>
 
-<span style="font-weight: bold;">Abspielreihenfolge</span><br>
+<span style="font-weight: bold;">Progress control</span><br>
+
+Click&amp;Drag the horizontal slider.<br>
+
+<br>
+
+<h3>Control of the Player<span style="font-weight: bold;"></span></h3>
+
+<span style="font-style: italic;">Tip: Some buttons have
+more than one function. Try the right mouse button for context menus!</span><br>
+
+<br>
+
+<span style="font-weight: bold;">Play order</span><br>
 
 <br>
 
@@ -173,31 +168,31 @@ haben mehrere Funktionen. Probieren Sie die rechte Maustaste!</span><br>
 
 <br>
 
-Die einzelnen Symbole bedeuten dabei<br>
+The four symbols indicate<br>
 
 <ul style="list-style-type: circle;">
 
-  <li>Alles wiederholen: Nemp l&auml;uft die Playlist von
-oben nach unten durch und startet dann von vorne</li>
+  <li>Repeat everything. Nemp will play every title in the
+playlist and repeat after the last one</li>
 
-  <li>Titel wiederholen: Der aktuelle Titel wird in einer
-Schleife wiederholt.</li>
+  <li>Repeat current track: Only the current track is repeated in
+a loop</li>
 
-  <li>Zufallsmodus: Die Dateien werden in zuf&auml;lliger
-Reihenfolge
-abgespielt. In den Optionen k&ouml;nnen Sie einstellen, wann ein
-bereits abgespielter Titel erneut abgespielt werden darf.</li>
+  <li>Random mode: The tracks in the playlist a played randomly. <span style="font-style: italic;">Note: In the extended playlist
+settings you can adjust between "really random" (which means that a
+song can be played twice within a short time) or "Avoid repetitions"
+(which means if a song was played, it is blocked for some time).</span></li>
 
-  <li>Kein wiederholen: Nemp spielt die Playlist ab und
-h&auml;lt dann die Wiedergabe an.</li>
+  <li>Repeat off: Nemp will play every title in the playlist and
+stop after the last one.</li>
 
 </ul>
 
-<span style="font-weight: bold;">Aufnahme</span><br>
+<span style="font-weight: bold;">Recording</span><br>
 
 <br>
 
-Der Aufnahme-Button ist nur bei Webradio-Sendern im mp3-Format aktiv<br>
+The record button is only accessible on mp3-webstreams.<br>
 
 <br>
 
@@ -209,9 +204,8 @@ Der Aufnahme-Button ist nur bei Webradio-Sendern im mp3-Format aktiv<br>
 
       <td style="width: 30px;"><img style="width: 18px; height: 18px;" src="BtnRecord.png" alt="disabled"></td>
 
-      <td>Aufnahme nicht m&ouml;glich, da gerade eine Datei
-abgespielt wird, oder das Format des Senders von Nemp nicht
-f&uuml;r die Aufnahme unterst&uuml;tzt wird.</td>
+      <td>Recording not possible (either you are playing a local
+file, or the codec is not supported for recording).</td>
 
     </tr>
 
@@ -219,8 +213,8 @@ f&uuml;r die Aufnahme unterst&uuml;tzt wird.</td>
 
       <td><img style="width: 18px; height: 18px;" src="BtnRecord_1.png" alt=""></td>
 
-      <td>Aufnahme m&ouml;glich. Klicken Sie den Button um
-die Aufnahme zu starten.</td>
+      <td>Recording is possible. Click on the button to begin
+with recording the current webstream.</td>
 
     </tr>
 
@@ -228,8 +222,8 @@ die Aufnahme zu starten.</td>
 
       <td><img style="width: 18px; height: 18px;" src="BtnRecord_2.png" alt=""></td>
 
-      <td>Aufnahme l&auml;uft. Klicken Sie auf den Button, um
-die Aufnahme zu beenden.<br>
+      <td>Nemp is recording the current stream. Click on the
+button to stop.<br>
 
       </td>
 
@@ -238,12 +232,11 @@ die Aufnahme zu beenden.<br>
   </tbody>
 </table>
 
-Die Aufnahme wird in dem Verzeichnis gespeichert, das in den
-<a href="optionen_e_webradio.html">Einstellungen</a>
-daf&uuml;r angegeben wurde. Sie k&ouml;nnen das
-Verzeichnis &uuml;ber das Men&uuml; "Tools -&gt;
-Verzeichnisse -&gt;
-Aufnahmen" anzeigen lassen.<br>
+<br>
+
+The recording is saved into the directory given in the webradio
+settings. You can open it through the menu "Tools -&gt; Directories
+-&gt; Recordings".<br>
 
 <br>
 
