--- a/help/engl/nemp_start.html
+++ b/help/engl/nemp_start.html
@@ -3,12 +3,17 @@
 <head>
 
 
+
+  
   
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
 
+
   
 
 
+  
+  
   
   <title>Nemp: Noch ein mp3-Player</title>
   <style title="" media="" type="text/css">
@@ -29,230 +34,277 @@ font-size: 12px;
 <body>
 
 
+
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+
 
 
   <tbody>
 
 
+
     <tr>
+
 
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
 
+
       <td>
       
+      
       <h2 class="head">Nemp: Noch ein mp3-Player</h2>
+
 
 
       </td>
 
 
+
     </tr>
 
 
+
+  
   
   </tbody>
 </table>
 
 
+
 <hr style="width: 100%; height: 2px;"><br>
+"Noch ein mp3-Player" translates to "Yet another mp3-player"<br>
+<br>
+A&nbsp;mp3-Player for Windows<br>
+Current Version: 4.6<br>
 
-
-Ein mp3-Player f&uuml;r Windows<br>
-
-
-Aktuelle Version: 4.5<br>
 
 
 <br>
+
 
 
 &copy; 2005-2012 Daniel 'Gausi' Gau&szlig;mann<br>
 
 
+
 www.gausi.de, mail@gausi.de<br>
 
 
+
 <br>
+
 
 
 <div style="text-align: left;"><img style="width: 155px; height: 112px;" alt="nemp" src="nemp.jpg"><br>
 
 
+
 </div>
+
 
 
 <h3><br>
 
 
+
 </h3>
 
 
-<h3>Neu in Version 4.5</h3>
-<ul style="list-style-type: circle;">
-  <li>Unterst&uuml;tzung von Apev2-Tags</li>
-  <li>A-B-Wiederholung</li>
-  <li>&Uuml;berspringen von Stille am Ende eines Titels</li>
-  <li>Auswerten der Meta-Information "CD-Nr." bzw. "Part of a Set" bei Multi-CD-Alben</li>
-  <li>Optionen: Kein Splashscreen, Wechseln zu neu eingef&uuml;gtem Titel (bei Doppleklick im Explorer bei bereits laufendem Player)</li>
-  <li>Laden der Bibliotheks-Datei im Hintergrund (schnellerer Start)</li>
-  <li>Diverse &Auml;nderungen an der GUI<br>
-  </li>
-  <li>Diverse Bugfixes (Sortieren nach Dateiname/Ordner, "Kein Wiederholen", Trackermodul-Dateien)</li>
-</ul>
-<h3>Neu in Version 4.4 (Auszug)</h3>
 
+<h3>New in version 4.5</h3>
 
 <ul style="list-style-type: circle;">
 
+  <li>Support for Apev2-Tags</li>
 
-  <li>Stark &uuml;berarbeiteter Webserver: Positionsanzeige
-und Spulen
-im aktuellen Titel, Lautst&auml;rkeregelung, Sortieren und
-L&ouml;schen
-von Titeln in der Playlist, St&ouml;bern in der Medienbibliothek
-nach
-Interpret, Album oder Genre, optionale Unterteilung zwischen usern und
-Administratoren</li>
+  <li>A-B-Repeat</li>
 
+  <li>Skip silence at the end of a track</li>
 
-  <li>Der Webserver ist &uuml;ber Themes (relativ) leicht den
-eigenen W&uuml;nschen entsprechend anpassbar.&nbsp;</li>
+  <li>Support vor meta data "disc number"</li>
 
+  <li>Settings: No splashscreen, switch to new enqueued track (when
+double clicking a file in the Windows Explorer and Nemp already running)</li>
 
-  <li>Neue Funktion: Kopfh&ouml;rer-Titel in Playlist
-einf&uuml;gen und ab aktueller Position abspielen</li>
+  <li>Loading of library file in the background (quicker start)</li>
 
-
-  <li>&Auml;nderung: Drag&amp;Drop in die Playlist
-f&uuml;gt die Dateien hinter den markierten Titel ein, nicht mehr
-davor</li>
-
-
-</ul>
-
-
-<h3>Neu in Version 4.3 (Auszug)</h3>
-
-
-<ul style="list-style-type: circle;">
-
-
-  <li>Bessere Unterst&uuml;tzung von CD-Audio<br>
-
+  <li>Some minor changes at teh GUI<br>
 
   </li>
 
-
-  <li>Funktion "Medienbibliothek aufr&auml;umen" erweitert
-(d.h.
-Auswahl, ob fehlenden Dateien auf nicht verf&uuml;gbaren Laufwerken
-doch behalten werden sollen)</li>
-
-
-  <li>neue bass_fx-Version. dann klappts auch mit Windows 8</li>
-
-
-  <li>Umstellung auf die neue Scrobble-API</li>
-
+  <li>Some minor bugfixes</li>
 
 </ul>
 
+<h3>New in version 4.4 (extract)</h3>
 
-<h3>Neu in Version 4.2 (Auszug)</h3>
 
 
 <ul style="list-style-type: circle;">
 
 
-  <li>Multimediatasten sollten jetzt endlich vern&uuml;nftig
-funktionieren</li>
+
+  <li>New webserver with a lot of new features: Scrollbar for the
+current title, volume control, sorting Playlist, deleting items from
+the playlist, browsing the library by artist, album or genre, and an
+optional admin access with more rights than for normal users</li>
 
 
-  <li>Strg+V f&uuml;gt Dateien in der Playlist jetzt an der
-markierten Stelle ein</li>
+
+  <li>The webserver can be customized using themes</li>
 
 
-  <li>Wizard hinzugef&uuml;gt, der einige grundlegende
-Einstellungen abfragt</li>
+
+  <li>New feature: Insert track from headphones into the playlist and start playback immediately from the currently selected position</li>
 
 
-  <li>Alles, was im Hintergrund passiert und Musikdateien
-&auml;ndert
-oder neue Dateien erstellt (mit Ausnahme der Konfigurationsdateien,
-Medienbibliothek, Playlist usw. im "Daten"-Verzeichnis), ist jetzt
-Opt-In, d.h. es muss explizit erlaubt werden. Genau diese Dinge fragt
-der Wizard ab.</li>
 
+  <li>Change: Drag&amp;Drop into the playlist insert the files after the highlighted title, not before it</li>
 
-</ul>
-
-
-<h3>Neu in Version 4.1 (Auszug)</h3>
-
-
-<ul style="list-style-type: circle;">
-
-
-  <li>Unterst&uuml;tzung von Ogg- und Flac-Tags</li>
-
-
-  <li>Kopieren der Playlist inklusiver passender m3u-Datei durch
-Strg+Shift+C</li>
-
-
-  <li>Funktion "Playlist in Verzeichnis kopieren" (z.B. auf einen
-USB-Stick) mit Umbenennung der Dateien</li>
-
-
-  <li>Push-To-Talk durch F8 (&auml;hnlich der Jingles)</li>
-
-
-  <li>Unterst&uuml;tzung f&uuml;r das Display der
-Logitech G15 (andere
-Tastaturen k&ouml;nnen nachger&uuml;stet werden, wenn das
-jemand machen
-m&ouml;chte)</li>
 
 
 </ul>
 
 
-<h3>Neu in Version 4.0 (Auszug)</h3>
+
+<h3>New in version 4.3 (extract)</h3>
+
 
 
 <ul style="list-style-type: circle;">
 
 
-  <li>Sch&ouml;nerer Coverflow mit automatischem
-Cover-Download</li>
+
+  <li>Better support for CD-Audio<br>
 
 
-  <li>Browsemodus "Tagwolke"</li>
+
+  </li>
 
 
-  <li>Einfachere Bearbeitung der mp3-Dateien</li>
+
+  <li>Feature&nbsp;"Cleanup library" extended (i.e.
+Selection dialog, whether missing files on missing drives should be deleted or not)</li>
 
 
-  <li>Unterst&uuml;tzung f&uuml;r Windows 7</li>
+
+  <li>update of bass_fx.dll - needed for Windows8</li>
 
 
-  <li>Partymodus mit vergr&ouml;&szlig;erter Ansicht und
-reduzierten Funktionen</li>
+
+  <li>Changing scrobbling to the new API</li>
 
 
-  <li>Vormerk-Liste f&uuml;r die Playlist</li>
+
+</ul>
+
+
+
+<h3>New in version 4.2 (extract)</h3>
+
+
+
+<ul style="list-style-type: circle;">
+
+
+
+  <li>Multimedia keys should now work properly (finally!)</li>
+
+
+
+  <li>Ctrl+V will insert files into the playlist at the highlighted position</li>
+
+
+
+  <li>Added a wizard for some main features</li>
+
+
+
+  <li>Everything, what happens in the background and changes
+audio files, create new ones (except configuration files), going
+online, ... is now OPT-IN: These settings are done by the wizard.</li>
+
+
+
+</ul>
+
+
+
+<h3>New in version 4.1 (extract)</h3>
+
+
+
+<ul style="list-style-type: circle;">
+
+
+
+  <li>Support for meta tags in ogg- and flac-files</li>
+
+
+
+  <li>Copy playlist including a proper playlist file by Ctrl+Shift+C</li>
+
+
+
+  <li>Feature "Copy playlist" to copy the playlist (e.g. to a USB drive) with renaming files (e.g. "01-artist-title.mp3")</li>
+
+
+
+  <li>Push-To-Talk through F8 (similar to jingles by F9)</li>
+
+
+
+  <li>Support for Logitech G15 display (other keyboards may be supported later, ask me for details)</li>
+
+
+
+</ul>
+
+
+
+<h3>New in version 4.0 (extract)</h3>
+
+
+
+<ul style="list-style-type: circle;">
+
+
+
+  <li>Better coverflow with automatic download for missing cover art</li>
+
+
+
+  <li>Browse mode "Tagcloud"</li>
+
+
+
+  <li>Better editing of audio files</li>
+
+
+
+  <li>Suppoert for Windows7 (e.g. taskbar buttons)</li>
+
+
+
+  <li>Party mode with enlarged display and reduced features</li>
+
+
+
+  
 
 
   <li>...</li>
 
 
+
 </ul>
 
 
+
 <br>
+
 
 
 </body>
