--- a/help/engl/optionen_7_Ansicht.html
+++ b/help/engl/optionen_7_Ansicht.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-  <title>Anzeige</title>
+  <title>Display</title>
 
 
   <style title="" media="" type="text/css">
@@ -35,7 +35,7 @@ font-size: 12px;
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
       <td>
-      <h2 class="head">Anzeige</h2>
+      <h2 class="head">Display</h2>
 
       </td>
 
@@ -46,35 +46,57 @@ font-size: 12px;
 
 <hr style="width: 100%; height: 2px;"><br>
 
-Geben Sie an, welche Dinge wie angezeigt werden sollen.<br>
-<h3>Anzeige</h3>
+Configure what (and how) information is displayed.
 <ul style="list-style-type: circle;">
-  <li>Auswahl der sichtbaren Spalten in der Titelanzeige der Medienbibliothek.<br>
-    <span style="font-style: italic;">Tipp: Sie
-k&ouml;nnen die Auswahl auch &uuml;ber einen Rechtsklick auf
-die Spalten&uuml;berschriften im Hauptfenster &auml;ndern.</span></li>
-  <li>Sortierung beim Browsen in der Medienbibliothek</li>
-  <li>Titelanzeige immer sortieren oder nicht</li>
+
+  <li>Selection of the visible columns in the title list of the
+media library<br>
+
+    <span style="font-style: italic;">Tip: You can change
+the selection also by right click on the column header</span></li>
+
+  <li>Sort order for browsing the media library</li>
+
+  <li>Sort title list always (or not)</li>
+
 </ul>
 
+<h3>Party mode</h3>
 
-<h3>Partymodus</h3>
-Vor einiger Zeit schrieb mich jemand an, dass Nemp ein ganz toller Player f&uuml;r 
-Parties sei, weil jeder sofort damit klarkommt und man die Lieder wirklich 
-schnell findet.<br>
-Nur leider werden die Kn&ouml;ppe immer kleiner, wenn man ein paar 
-Bier getrunken hat und man klickt st&auml;ndig daneben ... stimmt.<br>
-<br>
-Im Partymodus werden wichtige Bedienelemente gr&ouml;&szlig;er
-dargestellt, und bestimmte Funktionen k&ouml;nnen deaktiviert werden.<br>
-<br>
-<span style="font-style: italic;">Tipp: Sperren Sie am besten auf Parties den Nemp-Rechner komplett, und bieten Sie ihren G&auml;sten die Nutzung des Nemp <a href="webserver.html">Webservers</a> an. Eine ausf&uuml;hrliche Anleitung inklusive WLAN-Aufbau finden Sie auf www.gausi.de</span><br>
-<h3>Erweiterte Einstellungen</h3>
-W&auml;hlen Sie die Scrollgeschwindigkeit der Titelanzeige, setzen Sie
-Schriftarten f&uuml;r unterschiedliche Datei-Qualit&auml;ten und einige
-weitere Dinge, die hin und wieder gebraucht werden, aber in der Regel
-eher nicht.<br>
+Some time ago, somebody mailed me, that Nemp is a wonderful player for
+parties, as everybody can understand the GUI very fast. But the buttons
+are getting smaller and smaller after a few beers and become harder to
+hit...<br>
 
 <br>
+
+So, in party mode the buttons are larger, and some features are blocked
+(e.g. to avoid deleting the library).<br>
+
+<br>
+
+<span style="font-style: italic;">Tip: Lock the Nemp-PC on
+a party, and offer your guests access to the player by the Nemp <a href="webserver.html">webservers</a>. For a detailed
+manual including a local wifi network, please visit www.gausi.de</span><br>
+
+<h3>Extended settings</h3>
+
+<span style="font-weight: bold;">Player and cover art:</span>
+Customize the scrolling speed, the position of the cover art in the
+title list of the media library and&nbsp;enable the 2D fallback
+coverflow.<br>
+
+<br>
+
+<span style="font-weight: bold;">Fonts:</span> Some
+ancient settings from the first versions of this software. <br>
+
+<br>
+
+<span style="font-weight: bold;">Extended viewing settings:</span>
+Some more settings (yes, I like settings).<br>
+
+<br>
+
 </body>
 </html>
