--- a/help/engl/webradio_verwaltung.html
+++ b/help/engl/webradio_verwaltung.html
@@ -2,15 +2,10 @@
 <html>
 <head>
 
-
-  
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+  <title>Manage webradio stations</title>
 
-  
 
-
-  
-  <title>Webradio-Verwaltung</title>
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -28,86 +23,62 @@ font-size: 12px;
 
 <body>
 
-
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
-
 
   <tbody>
 
-
     <tr>
-
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
-
       <td>
-      
-      <h2 class="head">Verwaltung von Webradio</h2>
-
+      <h2 class="head">Manage webradio stations</h2>
 
       </td>
 
-
     </tr>
 
-
-  
   </tbody>
 </table>
 
-
 <hr style="width: 100%; height: 2px;"><br>
 
-Nemp kann nicht nur Dateien verwalten, sondern auch eine Liste von Webradio-Sendern, die Sie regelm&auml;&szlig;ig h&ouml;ren.<br>
+Nemp can manage your favorite webradio stations.<br>
 
 <br>
 
-<span style="font-weight: bold;">Webradio - Favoriten</span><br>
+<span style="font-weight: bold;">Webradio - Favorites</span><br>
 
-In der klassischen Browse-Ansicht werden neben den Dateien auch die
-bevorzugten Webradio-Sender angezeigt. Sie k&ouml;nnen diese Liste
-&uuml;ber das Men&uuml; "Medienbibliothek -&gt; Webradio-Sender
-verwalten" bearbeiten.<br>
-
-Unter "Favoriten" k&ouml;nnen Sie neue Sender hinzuf&uuml;gen. Den
-Namen k&ouml;nnen Sie frei w&auml;hlen, als URL sollten Sie die Adresse
-des Senders eingeben. Sehr h&auml;ufig bekommt man diese auf der
-jeweiligen Webseite - in der Regel findet sich dort ein Link, der
-auf&nbsp;*.pls endet. Diesen Link m&uuml;ssen Sie im URL-Feld eintragen.<br>
+In the classic view of the media library, Nemp will display also your
+favorite webradio stations. You can edit this list through the menu
+"Media library -&gt; Manage webradio stations".<br>
 
 <br>
 
-<span style="font-style: italic;">Tipp: Viele Sender oder Webseiten bieten
-unterschiedliche Links f&uuml;r den Windows Media Player, Winamp oder
-den Real Player an. Am besten sollte Nemp mit dem Winamp-Link
-klarkommen.</span><br>
-
-<br>
-
-Sie k&ouml;nnen die Favoriten Liste auch Ihren W&uuml;nschen entsprechend sortieren.<br>
+<span style="font-style: italic;">Tip: Many stations offer
+different links for Windows Media Player, Winamp amd Real Player. You
+should use the Winamp link for Nemp.</span><br>
 
 <br>
 
 <span style="font-weight: bold;"></span><br>
 
-<span style="font-weight: bold;">Stream-Playlist parsen</span><br>
+<span style="font-weight: bold;">Parse stream
+playlist&nbsp;</span><br>
 
-Viele Sender bieten eine *.pls-Datei zum Anh&ouml;ren an. Das ist
-eigentlich ein Playlisten-Format, in dem mehrere Dateien oder Adressen
-angegeben sein k&ouml;nnen. Bei Webradio-Sendern werden oft mehrere
-Adressen angegeben, die alle dasselbe senden, aber die Last auf mehrere
-Server verteilen.<br>
+Many webradio stations offer you a *.pls file to tune in. In fact, this
+is a well known format to store playlists (and supported by Nemp).
+Quite often these pls files contains a list of several servers.
+Sometimes all servers will stream the same content, but maybe with a
+different quality setting or encoding.<br>
 
-Nemp bietet die M&ouml;glichkeit, all diese Adressen in die Playlist
-aufzunehmen - dann erscheint ein Sender ggf. mehrfach in der Playlist.
-Ansonsten w&auml;hlt Nemp intern eine zuf&auml;llige Adresse aus dieser
-Liste aus.<br>
-
-<br>
+Nemp can parse the pls file and add all the servers to the playlist, or
+Nemp can just add the pls file itself to the playlist, and the server
+is choosen automatically.<br>
 
 <br>
 
+<br>
 
 </body>
 </html>
