--- a/help/engl/nemp_tagcloud.html
+++ b/help/engl/nemp_tagcloud.html
@@ -2,20 +2,10 @@
 <html>
 <head>
 
-
-
-  
-  
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+  <title>The Nemp tag cloud</title>
 
 
-  
-
-
-  
-  
-  
-  <title>Die Tagwolke von Nemp</title>
   <style title="" media="" type="text/css">
 .head { margin: 0px;
 padding: 0px;
@@ -33,80 +23,60 @@ font-size: 12px;
 
 <body>
 
-
-
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
-
-
 
   <tbody>
 
-
-
     <tr>
-
-
 
       <td style="width: 50px;"><img style="width: 47px; height: 27px;" src="hilfe.png" alt=""></td>
 
-
-
       <td>
-      
-      
-      <h2 class="head">Die Tagwolke</h2>
-
-
+      <h2 class="head">The Nemp tag cloud</h2>
 
       </td>
 
-
-
     </tr>
 
-
-
-  
-  
   </tbody>
 </table>
 
-
-
 <hr style="width: 100%; height: 2px;"><br>
+
 <div style="text-align: center;"><img style="width: 378px; height: 245px;" alt="tagcloud" src="browse_tagwolke.jpg"><br>
+
 </div>
-<br>
-Die Tagwolke ist meines Wissens nach etwas neues im Bereich
-"mp3-Player". Ob&nbsp;sie n&uuml;tzlich ist, mag jeder selbst
-entscheiden.<br>
 
 <br>
 
-<br>
-
-<span style="font-weight: bold;">Basisfunktion</span><br>
-
-F&uuml;r die Tagwolke werden initial die Eigenschaften Interpret,
-Albumname, Genre, Jahr und Jahrzehnt (z.B. "90s") der Titel in der
-Medienbibliothek in einen Topf geworfen. Die h&auml;ufigsten dieser
-"Tags" werden dann in einer Wolke angezeigt, wie man sie von vielen
-Webseiten her kennt.<br>
-
-Sie k&ouml;nnen dann z.B. den Tag "00s" oder "90s" anw&auml;hlen und
-bekommen dann alle Titel aus den 2000er Jahren oder den 90ern
-angezeigt. Wenn Sie diesen Tag doppelt anklicken (oder die Entertaste
-bet&auml;tigen), wird aus diesen Titeln eine neue Tagwolke erzeugt -
-das k&ouml;nnen Sie fast beliebig fortf&uuml;hren.<br>
+The tag cloud is (as far as I know) something new for mp3 players.
+Whether it is useful or not is up to you.<br>
 
 <br>
 
-<span style="font-weight: bold;">Weitere Tags</span><br>
+<br>
 
-Das interessante ist nun die M&ouml;glichkeit, den Titeln weitere Tags
-zuzuordnen, die auch in den mp3-Dateien selbst gespeichert werden.
-Z.B.&nbsp;k&ouml;nnen Sie einem Titel dadurch mehrere Genres zuordnen,
-oder andere Kommentare dort angeben, die das Lied klassifizieren.<br>
+<span style="font-weight: bold;">Basic idea</span><br>
+
+Properties like artist, album, genre, date and decade from the audio
+files will be collected into one big list. The most common used "tags"
+will be displayed in a tag cloud, as it is known from many websites.<br>
+
+You can then select a tag (e.g. "90s" or "pop"), and Nemp will show you
+all titles from 1990 to 1999, or all titles tagged with "pop". When you
+double click a tag, Nemp will crete a new tag cloud limited to the
+files that are tagged with the selected one.<br>
+
+<br>
+
+<span style="font-weight: bold;">Additional tags</span><br>
+
+The tag cloud becomes more interesting, when you use additional tags
+(i.e. not only artist-album-genre-date). Nemp can store (almost) any
+number of&nbsp; additional tags. These tags have no special meaning
+(like "artist"), but are just used to describe the track a little bit
+more detailed. You can add some alternate genres, or personal tags like
+"just wunderful" or "beach holiday 2012".<br>
 
 <br>
 
@@ -116,36 +86,29 @@ oder andere Kommentare dort angeben, die das Lied klassifizieren.<br>
 
 <br>
 
-Das ist nat&uuml;rlich etwas m&uuml;hsam, das f&uuml;r seine gesamte Medienbibliothek zu machen.<br>
+It would be a lot of work to do this for every single file. Therefore:<br>
 
 <br>
 
-<span style="font-weight: bold;">Tags von LastFM</span><br>
+<span style="font-weight: bold;">Tags from LastFM</span><br>
 
-Bei LastFM gibt es nicht nur Cover, sondern auch weitere Tags, die von
-der Community gepflegt werden - vielleicht haben Sie ja schon selbst
-einige Lieder dar&uuml;ber getaggt.<br>
+Nemp can use the LastFM database to get additional tags for your audio
+files. These tags are set by the LastFM community and are quite useful
+in most cases. Choose from the menu "Medialibrary -&gt; Get
+additional tags for selected files".<br>
 
-Nemp kann die h&auml;ufigsten Tags f&uuml;r ein Lied bei LastFM
-abfragen und in der Medienbibliothek speichern. W&auml;hlen Sie
-daf&uuml;r die Dateien aus, die sie betaggen m&ouml;chten und
-w&auml;hlen im Men&uuml; "Zus&auml;tzliche Tags von LastFM holen".<br>
+<span style="font-style: italic;">Note 1: This will only
+work, if the default tags (artist, title) are already set.<br>
 
-<span style="font-style: italic;">Hinweis: Das funktioniert nur, wenn die Dateien schon ordentliche Standard-ID3-Tags wie Interpret und Titel haben! </span><span style="font-style: italic;">Und: das dauert etwas. Erstens ist das Internet langsam, und zweitens werden die Admins bei LastFM</span><br style="font-style: italic;">
-
-<span style="font-style: italic;">b&ouml;se, wenn ein Programm die API zu stark strapaziert. Ungef&auml;hr 2-3 Dateien pro Sekunde sind ok, mehr nicht.</span><br>
-
-<br>
-
-Mit diesen zus&auml;tzlichen Tags wird die Tagwolke dann schon etwas aussagekr&auml;ftiger.<br>
+Note 2: This will take some time. LastFM allows only a few queries per
+second. If Nemp would use as many queries as your internet connection
+can handle, Nemp will permanently be blocked from using this service.</span><span style="font-style: italic;"></span><br>
 
 <br>
 
 <br>
 
 <br>
-
-
 
 </body>
 </html>
